fix: color contrast issue on links (#214)

--- a/src/components/rule-card.scss
+++ b/src/components/rule-card.scss
@@ -32,10 +32,9 @@ article.ruleCard {
 		}
 		a.sc-item {
 			cursor: pointer;
-			text-decoration: none;
 			text-transform: capitalize;
 			&:hover {
-				color: $accent;
+				opacity: 0.9;
 			}
 			p {
 				margin: 0;
